--- a/idleCivDemo.html
+++ b/idleCivDemo.html
@@ -3,7 +3,7 @@
 <head>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<script src="javascript/main.js"></script>
+<script src="javascripts/main.js"></script>
 
 <style>
 .butt {
