--- a/idleCivDemo.html
+++ b/idleCivDemo.html
@@ -10,11 +10,13 @@
     border: 1px outset blue;
     background-color: lightBlue;
     height:60px;
-    width:60px;
+    width:31%;
     cursor:pointer;
     text-align: center;
     vertical-align: middle;
-    line-height: 20px; 
+    line-height: 20px;
+	margin:10px;
+	float:left;
 }
 
 .butt:hover {
