--- a/test.html
+++ b/test.html
@@ -3,7 +3,6 @@
 <head>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<script src="javascripts/main.js"></script>
 
 <style>
 </style>
@@ -14,9 +13,10 @@
 
 
 <body>
-<label>Hola, escribe tu nombre aqui</label>
-<input id="algo" onclick="alert('hola '+this.value+' creo que sos muy linda(?)')"></input>
 
+<label>Hola, escribe tu nombre aqui</label>
+<input id="algo" ></input>
+<input type="button" value="aceptar" onclick="alert('hola '+$('#algo').val()+' creo que sos muy linda(?)')"></input>
 
 </body>
 </html>
