--- a/idleCivDemo.html
+++ b/idleCivDemo.html
@@ -2,40 +2,179 @@
 <html>
 <head>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<script src="javascripts/main.js"></script>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
 
-<style>
-.butt {
-    border: 1px outset blue;
-    background-color: lightBlue;
-    height:60px;
-    width:31%;
-    cursor:pointer;
-    text-align: center;
-    vertical-align: middle;
-    line-height: 20px;
-	margin:10px;
-	float:left;
-}
+    <title>Simple Sidebar - Start Bootstrap Template</title>
 
-.butt:hover {
-   background-color: blue;
-    color:white;
-}
-</style>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="bootstrap/bootstrap.min.css">
+
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="bootstrap/bootstrap-theme.min.css">
+
+    <link href="stylesheets/simple-sidebar.css" rel="stylesheet">
+
+    <!-- Latest compiled and minified JavaScript -->
+    
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+
+    <script src="bootstrap/bootstrap.min.js"></script>
+
+    <!-- main -->
+    <script src="javascripts/main.js"></script>
+
+    
+
+    <style>
+    .butt {
+        border: 1px outset blue;
+        background-color: lightBlue;
+        height:60px;
+        width:31%;
+        cursor:pointer;
+        text-align: center;
+        vertical-align: middle;
+        line-height: 20px;
+    	margin:10px;
+    	float:left;
+    }
+
+    .butt:hover {
+       background-color: blue;
+        color:white;
+    }
+    </style>
 
 
 </head>
 
-
-
 <body>
 
-<div id="items" style="width:50%;float:left"></div>
+    <div id="wrapper">
 
-<div id="resources" style="width:50%;float:right"></div>
+        <!-- Sidebar -->
+        <div id="sidebar-wrapper">
+            <ul class="sidebar-nav">
+                <li class="sidebar-brand">
+                    <a href="#">
+                        Proyectos.
+                    </a>
+                </li>
+                <li>
+                    <a href="idleCivDemo.html" class="toggled">Idle game maker</a>
+                </li>
+                <li>
+                    <a href="#">Shortcuts</a>
+                </li>
+                <li>
+                    <a href="#">Overview</a>
+                </li>
+                <li>
+                    <a href="#">Events</a>
+                </li>
+                <li>
+                    <a href="#">About</a>
+                </li>
+                <li>
+                    <a href="#">Services</a>
+                </li>
+                <li>
+                    <a href="#">Contact</a>
+                </li>
+            </ul>
+        </div>
 
+        <div id="page-content-wrapper">
+            <div class="container-fluid">
+
+                <div id="formItem" class="form-horizontal">
+                    <fieldset>
+
+                    <!-- Form Name -->
+                        <legend>Form Name</legend>
+
+                        <!-- Text input-->
+                        <div class="control-group">
+                          <label class="control-label" for="inputItemName">Nombre</label>
+                          <div class="controls">
+                            <input id="inputItemName" name="inputItemName" type="text"  class="input-xlarge">
+                          </div>
+                        </div>
+
+                        <!-- Text input-->
+                        <div>
+                            <div class="control-group">
+                              <label class="control-label">Precio inicial</label>
+                              <div class="controls">
+                                <input type="text" placeholder="Tipo de recurso" class="input-xlarge initialPriceResource">
+                                <input type="text" placeholder="Cantidad" class="input-xlarge">
+                              </div>
+                            </div>
+                        </div>
+                        <!-- Button -->
+                        <div class="control-group">
+                          <div class="controls">
+                            <button id="addInitialPrice" name="addInitialPrice" class="btn btn-default">Agregar otro precio inicial</button>
+                          </div>
+                        </div>
+
+                        <!-- Text input-->
+                        <div class="control-group">
+                          <label class="control-label" for="inputItemIcrement">Incremento</label>
+                          <div class="controls">
+                            <input id="inputItemIcrement" name="inputItemIcrement" type="text" class="input-xlarge input-">
+                            <p class="help-block">e.g. 1.05(aumento del 5% de los precios por cada uno comprado).</p>
+                          </div>
+                        </div>
+                        <br>
+                        <!-- Text input-->
+                        <div class="control-group">
+                          <label class="control-label" >Produccion</label>
+                          <div class="controls">
+                            <input type="text" placeholder="Tipo de recurso o item" class="input-xlarge itemProduction">
+                            <input type="text" placeholder="Cantidad" class="input-xlarge">
+                          </div>
+                        </div>
+
+                        <div class="control-group">
+                          <div class="controls">
+                            <button id="addProduction" name="singlebutton" class="btn btn-default">Agregar otro tipo de produccion.</button>
+                          </div>
+                        </div>
+
+                        <div class="control-group">
+                          <div class="controls">
+                            <button id="submitItem" name="singlebutton" class="btn btn-primary">Aceptar item</button>
+                          </div>
+                        </div>
+
+                    </fieldset>
+                </div>
+
+                <div id="items" style="width:50%;float:left"></div>
+
+                <div id="resources" style="width:50%;float:right"></div>
+
+
+            </div>
+        </div>
+        <!-- /#page-content-wrapper -->
+
+    </div>
+
+    <!-- Menu Toggle Script -->
+    <script>
+    $("#menu-toggle").click(function(e) {
+        e.preventDefault();
+        $("#wrapper").toggleClass("toggled");
+    });
+    </script>
 
 </body>
+
 </html>
