--- a/idleCivDemo.html
+++ b/idleCivDemo.html
@@ -161,6 +161,9 @@
 
                     </fieldset>
                 </div>
+				<div id="formAddResources">
+						
+				</div>
 
                 <div id="items" style="width:50%;float:left"></div>
 
