Agregados html para control de upgrades

--- a/idleCivDemo.html
+++ b/idleCivDemo.html
@@ -165,6 +165,39 @@
 						
 				</div>
 
+                <div id="formCreateUpgrade" class="form-horizontal">
+                    <div class="form-group control-group">
+                        <label class="control-label" for="inputSuccess1">Nombre del upgrade</label>
+                        <div class="controls">
+                            <input type="text" class="form-control" id="inputSuccess1">
+                        </div>
+                    </div>
+
+                    <div class="form-group control-group">
+                        <label class="control-label" for="select2">Item/s a los que afecta este upgrade</label>
+                        <div class="controls">
+                        <select multiple class="form-control" id="select2">
+                        </select>
+                        </div>
+                    </div>
+                    <!-- esto se va a hacer dinamico por cada item seleccionado, si la opcion es everyone, las opciones que aparecen aca seran menores -->
+                    <div class="form-group control-group">
+                        <label class="control-label" for="select1">Tipo de upgrade</label>
+                        <div class="controls">
+                        <select class="form-control" id="select1">
+                            <option>Sum</option>
+                            <option>Percentage</option>
+                            <option>Add production type</option>
+                            <option>Cost reduction</option>
+                            <option>Delete cost type</option>
+                            <option>Interest over a resource</option>
+                            <option>Bonus from getting achievments</option>
+                        </select>
+                        </div>
+                    </div>
+                    
+                </div>
+
                 <div id="items" style="width:50%;float:left"></div>
 
                 <div id="resources" style="width:50%;float:right"></div>
