--- a/idleCivDemo.html
+++ b/idleCivDemo.html
@@ -96,7 +96,7 @@
         <div id="page-content-wrapper">
             <div class="container-fluid">
 
-                <div id="formItem" class="form-horizontal">
+                <div id="formItem" class="form-horizontal col-lg-6">
                     <fieldset>
 
                     <!-- Form Name -->
@@ -161,6 +161,7 @@
 
                     </fieldset>
                 </div>
+                <div id="upgrades" class="col-lg-6"></div>
 				<div id="formAddResources">
 						
 				</div>
@@ -184,6 +185,12 @@
                     </div>
                     <!-- esto se va a hacer dinamico por cada item seleccionado, si la opcion es everyone, las opciones que aparecen aca seran menores -->
                     <div id="itemsTypes">
+                    </div>
+
+                    <div class="control-group">
+                      <div class="controls">
+                        <button id="submitUpgrade" name="singlebutton" class="btn btn-primary" onclick="takeUpgrades();">Aceptar upgrade</button>
+                      </div>
                     </div>
                     
                 </div>
