Signed-off-by: Pablo <pablo.gotelli@shipeala.com>

--- a/SuSo/suso.html
+++ b/SuSo/suso.html
@@ -16,10 +16,10 @@
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
 
-    <link href="stylesheets/simple-sidebar.css" rel="stylesheet">
+    <link href="../stylesheets/simple-sidebar.css" rel="stylesheet">
 
     <!-- jquery ui: accordion and more(we are using just accordion for now) -->
-    <link href="javascripts/external/jquery-ui-1.11.4/jquery-ui.css" rel="stylesheet"></link>
+    <link href="../javascripts/external/jquery-ui-1.11.4/jquery-ui.css" rel="stylesheet"></link>
 
 
 
@@ -27,14 +27,14 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
     <!-- jquery ui: accordion and more(we are using just accordion for now) -->
-    <script src="javascripts/external/jquery-ui-1.11.4/jquery-ui.js"></script>
+    <script src="../javascripts/external/jquery-ui-1.11.4/jquery-ui.js"></script>
 
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 
 
     <!-- main -->
-    <script src="javascripts/internal/main.js"></script>
+    <script src="susoMain.js"></script>
 
     <script>
       $(function() {
@@ -52,7 +52,7 @@
 
 
 
-    
+
 
     <style>
     .butt {
@@ -255,7 +255,7 @@
 
 
 
-      
+
 
 </body>
 
