Agregado formulario basico para agregado de datos, si suena muy repetitivo pero es eso man
Signed-off-by: Pablo <pablo.gotelli@shipeala.com>

--- a/SuSo/suso.html
+++ b/SuSo/suso.html
@@ -18,6 +18,8 @@
 
     <link href="../stylesheets/simple-sidebar.css" rel="stylesheet">
 
+    <link href="suso.css" rel="stylesheet">
+
     <!-- jquery ui: accordion and more(we are using just accordion for now) -->
     <link href="../javascripts/external/jquery-ui-1.11.4/jquery-ui.css" rel="stylesheet"></link>
 
@@ -120,133 +122,10 @@
         <div id="page-content-wrapper">
             <div class="container-fluid">
                 <h1>My First Heading</h1>
-<p>My first paragraph.</p>
-<table>
-	<thead>
-		<tr>
-			<th> </th>
-			<th>1</th>
-			<th>2</th>
-			<th>3</th>
-			<th>4</th>
-			<th>5</th>
-			<th>6</th>
-			<th>7</th>
-			<th>8</th>
-			<th>9</th>
-		</tr>
-	</thead>
-	<tbody>
-		<tr>
-			<td>1</td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-		</tr>
-		<tr>
-			<td>2</td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-		</tr>
-		<tr>
-			<td>3</td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-		</tr>
-		<tr>
-			<td>4</td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-		</tr>
-		<tr>
-			<td>5</td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-		</tr>
-		<tr>
-			<td>6</td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-		</tr>
-		<tr>
-			<td>7</td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-		</tr>
-		<tr>
-			<td>8</td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-		</tr>
-		<tr>
-			<td>9</td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-		</tr>
-	</tbody>
-</table>
+                <p>My first paragraph.</p>
+                <button id="get">get</button>
+                <form id="frm"></form> <!-- form suso -->
+
             </div>
         </div>
         <!-- /#page-content-wrapper -->
