--- a/pegoTransformer/pegoConcatenate.html
+++ b/pegoTransformer/pegoConcatenate.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html>
+<header>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+  <script src="transformer.js"></script>
+</header>
 <body>
 
 <label for="transformar"> Ingrese texto para agregarle "pego" adelante</label>
