--- a/pegoTransformer/pegoConcatenate.html
+++ b/pegoTransformer/pegoConcatenate.html
@@ -9,6 +9,7 @@
 
 <label for="transformar"> Ingrese texto para agregarle "pego" adelante</label>
 <textarea id="transformar"></textarea>
+<button onclick="runTransformation()">Transformar</button>
 
 </body>
 </html>
