link opens in a new tab

--- a/queryParametersGenerator/index.html
+++ b/queryParametersGenerator/index.html
@@ -13,7 +13,7 @@
       Result:
     </span>
     <div>
-      <a href="" id="result"></a>
+      <a href="" target="_blank" id="result"></a>
     </div>
   </body>
 </html>
