Agregado fondo darkcyan al marcador, y sin ningun marcador encima del numero

--- a/BingoCalc/cartonMarker.html
+++ b/BingoCalc/cartonMarker.html
@@ -20,11 +20,11 @@
     }
 
     .marked {
-      background-color: orange;
+      background-color: darkcyan;
     }
 
     .marked .marcador {
-      display: block;
+      /*display: block;*/
     }
 
     .marcador {
