--- a/BingoCalc/cartonMarker.html
+++ b/BingoCalc/cartonMarker.html
@@ -19,6 +19,27 @@
       position: relative;
     }
 
+    /* @media (pointer:none),
+    (pointer:coarse) {
+      #cartones table td {
+        width: 150px !important;
+        height: 150px !important;
+        font-size: 145px !important;
+      }
+    } */
+
+    #cartones table td {
+      width: 50px;
+      height: 50px;
+      font-size: 45px;
+      position: relative;
+    }
+
+    #cartones table td.hasNumber {
+      cursor: pointer;
+      user-select: none;
+    }
+
     .marked {
       background-color: darkcyan;
     }
