Cambios para estilizado del mobile en el marcador

--- a/BingoCalc/cartonMarker.html
+++ b/BingoCalc/cartonMarker.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="./cartones.js" charset="utf-8"></script>
   <script src="./cartonMarker.js" charset="utf-8"></script>
   <link rel="stylesheet" href="./carton.css">
@@ -19,14 +20,14 @@
       position: relative;
     }
 
-    /* @media (pointer:none),
+    @media (pointer:none),
     (pointer:coarse) {
       #cartones table td {
-        width: 150px !important;
-        height: 150px !important;
-        font-size: 145px !important;
+        width: 35px !important;
+        height: 35px !important;
+        font-size: 30px !important;
       }
-    } */
+    }
 
     #cartones table td {
       width: 50px;
