cambiado color ultimo numero por uno mas visible

--- a/BingoCalc/maindos.html
+++ b/BingoCalc/maindos.html
@@ -104,7 +104,7 @@
     }
 
     .latestNumber {
-      color: blue;
+      color: yellow;
       background-color: black;
       text-align: center;
       border: 10px solid green;
